--- a/README
+++ b/README
@@ -2,13 +2,21 @@
 
 New file baNav exam 100084,100085 
 
-Method 2 and faSt use Kro 
+New commond dn enjoy free commond 🥀 with Frd share 🧚🔥
 
-Free cmnd 
 rm -rf FILE
 
-git clone https://github.com/ranisharma09/FILE.git
+git clone https://github.com/ranisharma09/FILE
 
 cd FILE
 
-python RANI.py
+python FIL3.py
+
+
+
+
+
+
+
+
+
