--- a/README
+++ b/README
@@ -17,6 +17,13 @@ python FIL3.py
 
 
 
+![IMG-20221014-WA0006](https://user-images.githubusercontent.com/109195584/195879962-2e8cb5dc-dea0-4aa9-9820-6e2f887e71a6.jpg)
+
+
+
+
+
+
 
 
 
