--- a/README
+++ b/README
@@ -1,4 +1,22 @@
-#Update Dn
+#Update Dn.           
+
+
+
+
+
+![IMG-20221014-WA0006](https://user-images.githubusercontent.com/109195584/195880409-d2ec6a59-fe09-4b06-9ec4-b05f63a96d3e.jpg)
+
+
+
+
+
+
+
+
+
+
+
+
 
 New file baNav exam 100084,100085 
 
